--- a/frontend_knowledge/src/index.css
+++ b/frontend_knowledge/src/index.css
@@ -234,6 +234,30 @@ visibility: hidden;
     margin-top: 10px;
 }
 
+/* стили для регистрации пользователей */
+.registration-section {
+  width: 400px;
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  padding: 50px;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  margin: 0 auto;  
+}
+
+.input-text {
+  width: 390px;
+  height: 20px; /* Задаем высоту */
+  padding: 2px; /* Добавляем внутренние отступы */
+  font-size: 16px; /* Увеличиваем размер шрифта */
+}
+
+.label-style {
+  /* margin-bottom: 00px; */
+  position: relative; 
+  top: -10px;
+}
 
 /*стили для знаний*/
 
@@ -259,9 +283,16 @@ visibility: hidden;
   /*padding: 2.5%;*/
 }
 
+/* рамка для шапки */
+.header-section {
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+}
 
+/* рамка для контента знания */
 .editor-section {
-  border: 1px solid #ddd;
+  border: 2px solid #ddd;
   border-radius: 8px;
   padding: 15px;
 }
