--- a/frontend_knowledge/src/index.css
+++ b/frontend_knowledge/src/index.css
@@ -49,12 +49,18 @@ display: inline-block;
 
 
 header {
+  height: 100px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: space-between; /* равномерное распределение */
   align-items: center; /* выравнивание по вертикали */
   padding: 10px 20px; /* отступы внутри header */
-  background: #696969; /* фон (по желанию) */
+  background: #696969; /* фон */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* тень (опционально) */
+  /* z-index: 1000; */
 }
 
 
@@ -75,7 +81,7 @@ main{
   width: 100%; /*сколько занимает по ширине сайта*/
 /*  padding: 50px 0px 100px 0px;*/
   /* height: 100vh;*/
-  padding: 2.5%;
+  /* padding: 2.5%; */
   /*border-right: 5px solid slategrey;*/
   
   /*отступ слева*/
@@ -91,14 +97,30 @@ main{
   
 }
 
-aside{
+/* aside{
   float: left;
   width: 10%;
-  padding: 2.5%;
-  /*height: 1200px;*/
-  height: 100%;
+  padding: 2.5%; 
+  height: 100%;  
+  } */
+
+  aside {
+  /* float: left; */
+  width: 15%;
+  position: fixed;
+  padding: 20px;
+  /* background-color: #2c3e50; */
+  color: #ecf0f1;
+  /* height: 100%; */
   
-  }
+  top: 120px;
+  bottom: 120px;
+  left: 0;
+  margin-left: 30px;
+  /* padding-bottom: 120px; */
+  
+  overflow-y: auto;
+}
 
 
 .footer {
@@ -180,34 +202,34 @@ visibility: hidden;
 
 
 /*стили для таблиц*/
-.receipt-editor {
+.table-editor {
     max-width: 1000px;
     margin: 0 auto;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
-.receipt-editor table {
+.table-editor table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
 
-.receipt-editor th, .receipt-editor td {
-    border: 1px solid #ddd;
+.table-editor th, .table-editor td {
+    /* border: 1px solid #ddd; */
     padding: 8px 12px;
     text-align: left;
 }
 
-.receipt-editor th {
-    background-color: green;
+.table-editor th {
+    background-color: #2E8B57;
 }
 
-.receipt-editor input[type="number"] {
+.table-editor input[type="number"] {
     width: 80px;
     padding: 5px;
 }
 
-.receipt-editor .reset-price {
+.table-editor .reset-price {
     margin-left: 5px;
     padding: 3px 6px;
     font-size: 12px;
@@ -215,21 +237,21 @@ visibility: hidden;
     border: 1px solid #ddd;
 }
 
-.receipt-editor .total-label {
+.table-editor .total-label {
     text-align: right;
     font-weight: bold;
 }
 
-.receipt-editor .total-sum {
+.table-editor .total-sum {
     font-weight: bold;
     font-size: 1.1em;
 }
 
-.receipt-editor .actions {
+.table-editor .actions {
     text-align: right;
 }
 
-.receipt-editor .error {
+.table-editor .error {
     color: #d32f2f;
     margin-top: 10px;
 }
@@ -243,7 +265,8 @@ visibility: hidden;
   /* display: flex; */
   /* justify-content: center; */
   /* align-items: center; */
-  margin: 0 auto;  
+  margin: 0 auto;
+  margin-top: 140px;  
 }
 
 .input-text {
@@ -262,8 +285,9 @@ visibility: hidden;
 /*стили для знаний*/
 
 .list-knowledge {
-  max-width: 60%;
-  margin-left: 15%;
+  max-width: 70%;
+  margin-left: 20%;
+  margin-top: 140px;
   /*margin: 0 auto;*/
   /*auto;*/
   /*padding: 20px;*/
@@ -275,8 +299,9 @@ visibility: hidden;
 }
 
 .post-container {
-  max-width: 60%;
-  margin-left: 15%;
+  max-width: 70%;
+  margin-left: 20%;
+  margin-top: 140px;
   /*margin: 0 auto;*/
   /*auto;*/
   /*padding: 20px;*/
@@ -435,3 +460,157 @@ visibility: hidden;
 .no-wrap {
   white-space: nowrap;
 }
+
+
+/* проекты */
+
+.header-chapter {  
+  max-width: 70%;
+  margin-left: 20%;
+  
+  margin-top: 140px;
+  /*auto;*/
+  /*padding: 20px;*/
+  /*padding: 2.5%;*/
+}
+
+.projects-view {
+  margin-top: 140px;
+  max-width: 70%;
+  margin-left: 20%;
+  /* border: 2px solid #ddd; */
+  border-radius: 8px;  
+}
+
+.project-section {  
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;  
+}
+
+.list-project {
+  /* max-width: 60%; */
+  width: 450px;
+  display: inline-block;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  /*margin: 0 auto;*/
+  
+  /* padding: 20px; */
+  /*padding: 2.5%;*/
+}
+
+.list-section {
+  /* max-width: 60%; */
+  width: 190px;
+  /* display: inline-block; */
+  margin-right: 50px;
+  margin-bottom: 50px;
+  background-color: #34495e;
+  /*margin: 0 auto;*/
+  transition: all 0.3s ease;
+  border-radius: 4px;
+  
+  /* padding: 20px; */
+  /*padding: 2.5%;*/
+}
+
+.list-section:hover {
+  background-color: #3d566e;
+}
+
+.list-section.active {
+  background-color: #A9A9A9;
+  border-left: 4px solid #16a085;
+  position: relative;
+  padding-right: 30px;
+}
+
+.list-section.active::after {
+  content: "";
+  position: absolute;
+  right: 15px;
+  top: 55%;
+  transform: translateY(-50%);
+  width: 40px; /* Размер вашей стрелки */
+  height: 40px;
+  background-image: url('assets/icons/strelka.png'); /* Путь от public */
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+
+.list-section h2 {
+  margin: 0 0 8px 0;
+  font-size: 18px;
+  color: #f1ecec;
+}
+
+
+
+.list-section .toolbar-button {
+  background-color: #3498db;
+  color: white;
+  padding: 6px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.list-section .toolbar-button:hover {
+  background-color: #2980b9;
+}
+
+.header-project {
+  /* max-width: 60%; */
+  width: 190px;
+  /* margin-left: 15%; */
+  /*margin: 0 auto;*/
+  /*auto;*/
+  /*padding: 20px;*/
+  /*padding: 2.5%;*/
+}
+
+
+.change-button {
+  width: 24px;
+  height: 24px;
+  background-image: url('assets/icons/pencil.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.change-button:hover {
+  transform: scale(1.5);
+}
+
+
+.accept-button {
+  width: 24px;
+  height: 24px;
+  background-image: url('assets/icons/galka.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.accept-button:hover {
+  transform: scale(1.5);
+}
+
+
+.container-user {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
