--- a/frontend_knowledge/src/index.css
+++ b/frontend_knowledge/src/index.css
@@ -284,7 +284,7 @@ visibility: hidden;
     font-weight: bold;
     font-size: 1.1em;
 }
-
+container-roadmap-view
 .table-editor .actions {
     text-align: right;
 }
@@ -724,7 +724,6 @@ visibility: hidden;
   display: flex;
   /*justify-content: space-between;*/
   padding: 10px;
-
 }
 
 
@@ -853,5 +852,26 @@ visibility: hidden;
   border: 1px solid #ddd;
   border-radius: 4px;
   font-size: 14px;
+}
+
+
+.container-knowledges-view {
+  height: 100vh;
+  display: flex;
+  /*justify-content: space-between;*/
+  /* padding: 10px; */
+
+}
+
+
+.knowledges-section {  
+  /* max-width: 30%; */
+  /* margin-left: 18%;   */
+  /* margin-top: 110px;     */
+  /*height: calc(100vh - 110px - 20px);*/
+  padding: 2.5%;
+  overflow-y: auto;
+
+  color: #E0FFFF;
 }
 
