--- a/frontend_knowledge/src/index.css
+++ b/frontend_knowledge/src/index.css
@@ -417,6 +417,13 @@ container-roadmap-view
   cursor: pointer;  
 }
 
+.cancel-button:hover {
+  background-color: #B22222;
+}
+
+
+
+
 .edit-button {
   background: #FFC107;
   color: black;
