--- a/frontend_knowledge/src/index.css
+++ b/frontend_knowledge/src/index.css
@@ -106,13 +106,14 @@ main{
   /* float: left; */
   width: 15%;
   position: fixed;
-  padding: 20px;
+  padding: 1.5%;
   /* background-color: #2c3e50; */
   color: #ecf0f1;
   /* height: 100%; */
   
   top: 120px;
   bottom: 120px;
+
   left: 0;
   margin-left: 30px;
   /* padding-bottom: 120px; */
