--- a/frontend_knowledge/src/index.css
+++ b/frontend_knowledge/src/index.css
@@ -339,18 +339,21 @@ container-roadmap-view
 
 .task-content-area {
   /*height: 100vh;*/
-  height: calc(100vh - 110px - 20px);
+  margin-top: 120px;  
+  height: calc(100vh - 230px - 10px);
   display: flex;
-  flex-direction: column;
-  overflow: hidden;
+  /* flex-direction: column; */
+  /* overflow: hidden; */
+  overflow: auto;
 }
 
 .task-container {  
   width: 700px;
+  padding: 2%;
   /*max-width: 100%;  */
   /*margin-left: 10%;*/
-  margin-top: 155px;  
-  overflow: auto;
+  margin-top: 33px;  
+  /* overflow: auto; */  
 }
 
 
@@ -406,10 +409,14 @@ container-roadmap-view
 }
 
 /* рамка для контента знания */
-.editor-section {
+.editor-section {  
   border: 2px solid #ddd;
   border-radius: 8px;
-  padding: 15px;
+  padding: 15px;  
+}
+
+.editor-content-margin {
+  margin-bottom: 50px; 
 }
 
 /*.editor-toolbar {
@@ -678,7 +685,7 @@ container-roadmap-view
 .section-middle {  
   max-width: 30%;
   margin-left: 18%;  
-  margin-top: 110px;
+  margin-top: 120px;
   padding: 2.5%;
   overflow-y: auto;
   color: #E0FFFF;
@@ -710,11 +717,11 @@ container-roadmap-view
   /*top: 120px;*/
   /*bottom: 120px;*/
   display: flex;
-  height: calc(100vh - 110px - 20px);
+  height: calc(100vh - 110px - 10px);
   /*height: 100vh;*/
   /*justify-content: space-between;*/
-  padding: 10px;  
-  flexDirection: column;
+  /* padding: 10px;   */
+  /* flexDirection: column; */
   /*overflow-y: auto;  */
   overflow: hidden;
 }
